--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,12 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "pwa-chrome",
-      "request": "launch",
-      "name": "Launch Chrome against localhost",
-      "url": "http://localhost:8080",
-      "webRoot": "${workspaceFolder}"
+      "type": "pwa-node",
+      "request": "attach",
+      "name": "Attach to Process",
+      "protocol": "inspector",
+      "address": "localhost",
+      "port": 9229
     }
   ]
 }
