--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "portfolio",
+  "name": "lauchershop",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "main": "index.js",
   "scripts": {
+    "debug": "nodemon --inspect=0.0.0.0:9229 src/server.js",
     "start": "npm-run-all -p nodemon browser-sync",
     "nodemon": "nodemon src/server.js",
     "browser-sync": "browser-sync start --proxy http://localhost:5000  --files 'public, app/views'"
@@ -14,6 +16,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "method-override": "^3.0.0",
+    "multer": "^1.4.2",
     "nunjucks": "^3.2.2",
     "pg": "^8.5.1"
   },
