--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "json-server": "^0.16.3",
     "method-override": "^3.0.0",
     "multer": "^1.4.2",
     "nunjucks": "^3.2.2",
