--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "json-server": "^0.16.3",
     "method-override": "^3.0.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.0",
     "nunjucks": "^3.2.2",
     "pg": "^8.5.1"
   },
